add fix swagger sidebar
